traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^TraversalByColumn:8: error: not found: value getMondeLargueur
  return (getMondeLargueur() == getX() && getY() == getMondeHauteur())
          ^TraversalByColumn:8: warning: enclosing method posFinale has result type Unit: return value discarded
  return (getMondeLargueur() == getX() && getY() == getMondeHauteur())
  ^